# roboticArm_ROS

./: .swp  note.txt  note.txt~  problems.txt  problems.txt~  wolfram.txt
catkin_ws/src/arm_control/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  controller_plugins.xml  package.xml
catkin_ws/src/arm_control/catkin_generated/: arm_control-msg-extras.cmake.installspace.in  generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_ws/src/arm_control/catkin_generated/installspace/: arm_control-msg-extras.cmake  arm_control.pc  arm_controlConfig.cmake  rrbot_controlConfig.cmake
catkin_ws/src/arm_control/catkin_generated/stamps/arm_control/: package.xml.stamp
catkin_ws/src/arm_control/cmake/: arm_control-genmsg-context.py  arm_control-genmsg.cmake
catkin_ws/src/arm_control/config/: arm_control.yaml  arm_control.yaml.old
catkin_ws/src/arm_control/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/arm_control/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/src/arm_control/devel/lib/pkgconfig/: arm_control.pc  rrbot_control.pc
catkin_ws/src/arm_control/devel/share/arm_control/cmake/: arm_controlConfig.cmake
catkin_ws/src/arm_control/gtest/: CTestTestfile.cmake  Makefile
catkin_ws/src/arm_control/include/: .arm_control.h.swp  arm_control.cpp  arm_control.h  arm_control_file.h
catkin_ws/src/arm_control/launch/: arm_control.launch  arm_control.launch.old
catkin_ws/src/arm_control/src/: .arm_control.cpp.swp  .pub1.cpp.swp  arm_control.cpp  arm_lib.cpp  arm_lib.h  arm_test.cpp  forward_kinematic.cpp  my_controller_file.cpp  pub1.cpp
catkin_ws/src/vh_control/: CMakeLists.txt  CTestTestfile.cmake  package.xml  package.xml~
catkin_ws/src/vh_control/arduino_sketch/libraries/ros_lib/app_manager/: InstallApp.h
catkin_ws/src/vh_control/arduino_sketch/libraries/ros_lib/arm_control/: servo.h
catkin_ws/src/vh_control/arduino_sketch/src/brazo_fer_armMove/: brazo_fer_armMove.ino
catkin_ws/src/vh_control/arduino_sketch/src/test_armMove/: test_armMove.ino
catkin_ws/src/vh_control/arduino_sketch/src/test_armMove_customMessage/: test_armMove_customMessage.ino
catkin_ws/src/vh_control/arduino_sketch/src/test_armMove_keyboardControl/: test_armMove_keyboardControl.ino
catkin_ws/src/vh_control/arduino_sketch/src/test_servoMove_rosSubscriber/: test_servoMove_rosSubscriber.ino
catkin_ws/src/vh_control/catkin_generated/: arm_control-msg-extras.cmake.develspace.in  generate_cached_setup.py  package.cmake
catkin_ws/src/vh_control/catkin_generated/installspace/: arm_control.pc  arm_controlConfig.cmake
catkin_ws/src/vh_control/cmake/: arm_control-genmsg-context.py
catkin_ws/src/vh_control/config/: arm_control.yaml
catkin_ws/src/vh_control/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/vh_control/gtest/: CTestTestfile.cmake  Makefile
catkin_ws/src/vh_control/launch/: arm_control.launch
catkin_ws/src/vh_control/msg/: servo.msg
document/: thesis_note.txt
personal/: note.txt
(+862 files in other folders)
